<resources>
    <string name="app_name">Curiate</string>
    <string name="saved">Saved</string>
    <string name="explore">Explore</string>
    <string name="collection">Collection</string>
    <string name="search">Search</string>
    <string name="article_image">article image</string>
    <string name="save_to_curiate">Save to Curiate</string>
    <string name="fetching_preview">Fetching Preview…</string>
    <string name="add_tags_optional">Add Tags (Optional)</string>
    <string name="add_tag">Add Tag</string>
    <string name="save_post">Save Post</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close">close</string>
    <string name="category">Category</string>
    <string name="empty_title">Your library is empty</string>
    <string name="empty_description">Save content from your favorite apps to see it here.</string>
    <string name="filter">Filter</string>
    <string name="sort_by">Sort By</string>
    <string name="filter_category">Filter Category</string>
    <string name="latest">Latest</string>
    <string name="oldest">Oldest</string>
    <string name="option_1">option 1</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="all">All</string>
</resources>