<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/card_margin_horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.savedscreen.FilterModal">

    <View
        android:id="@+id/drag_handle"
        android:layout_width="32dp"
        android:layout_height="4dp"
        android:layout_marginTop="@dimen/spacing_small"
        android:background="@drawable/bottom_sheet_drag_handle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/sort_by_tv"
        style="@style/Curiate.TextAppearance.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/sort_by"
        app:layout_constraintTop_toTopOf="@id/drag_handle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/sort_chips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:selectionRequired="true"
        app:checkedChip="@+id/chip_latest"
        app:layout_constraintTop_toBottomOf="@id/sort_by_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_latest"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latest"
            android:checkable="true"
            app:checkedIcon="@drawable/check_icon"
            app:checkedIconVisible="true"
            app:checkedIconTint="@color/bnv_icon_color"
            app:chipBackgroundColor="@color/bnv_background_color"
            app:chipStrokeColor="@color/bnv_text_color"
            app:chipStrokeWidth="1dp"
            android:textColor="@color/bnv_text_color"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_oldest"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oldest"
            android:checkable="true"
            app:checkedIcon="@drawable/check_icon"
            app:checkedIconVisible="true"
            app:checkedIconTint="@color/bnv_icon_color"
            app:chipBackgroundColor="@color/bnv_background_color"
            app:chipStrokeColor="@color/bnv_text_color"
            app:chipStrokeWidth="1dp"
            android:textColor="@color/bnv_text_color"/>
    </com.google.android.material.chip.ChipGroup>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="@dimen/divider_height"
        android:background="?attr/colorOnSurface"
        android:layout_marginVertical="@dimen/spacing_medium"
        app:layout_constraintTop_toBottomOf="@id/sort_chips"
        app:layout_constraintStart_toStartOf="@id/sort_chips"
        app:layout_constraintEnd_toEndOf="@id/sort_chips"/>

    <TextView
        android:id="@+id/filter_category"
        style="@style/Curiate.TextAppearance.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:layout_marginTop="@dimen/spacing_medium"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="@id/sort_chips"
        app:layout_constraintEnd_toEndOf="@id/sort_chips"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filter_dropdown"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:hint="@string/filter_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/filter_category"
        app:layout_constraintStart_toStartOf="@id/sort_chips"
        app:layout_constraintEnd_toEndOf="@id/sort_chips">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:text="@string/option_1"
            android:labelFor="@id/filter_dropdown"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/action_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginBottom="@dimen/spacing_medium"
        app:layout_constraintTop_toBottomOf="@id/filter_dropdown"
        app:layout_constraintStart_toStartOf="@id/sort_chips"
        app:layout_constraintEnd_toEndOf="@id/sort_chips"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/cancel_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/submit_button"
            style="?attr/materialButtonOutlinedStyle"
            android:backgroundTint="?attr/colorPrimary"
            android:textColor="?attr/colorOnPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_weight="1"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>