<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/card_background"
    android:paddingBottom="@dimen/spacing_medium"
    tools:context=".ui.SaveContentFragment">

    <View
        android:id="@+id/drag_handle"
        android:layout_width="32dp"
        android:layout_height="4dp"
        android:layout_marginTop="@dimen/spacing_small"
        android:background="@drawable/bottom_sheet_drag_handle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/save_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/save_to_curiate"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/text_primary"
        app:layout_constraintTop_toBottomOf="@id/drag_handle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/close_button"
        android:layout_width="@dimen/icon_button_size"
        android:layout_height="@dimen/icon_button_size"
        android:src="@drawable/ic_close"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:tint="@color/icon_tint"
        app:layout_constraintTop_toTopOf="@id/save_title_text"
        app:layout_constraintBottom_toBottomOf="@id/save_title_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/spacing_small"
        android:contentDescription="@string/close"/>

    <View
        android:id="@+id/divider_top"
        android:layout_width="0dp"
        android:layout_height="@dimen/divider_height"
        android:layout_marginTop="@dimen/spacing_medium"
        android:background="@color/divider_color"
        app:layout_constraintTop_toBottomOf="@id/save_title_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/divider_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fetching_text"/>

    <TextView
        android:id="@+id/fetching_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fetching_preview"
        android:textSize="18sp"
        android:layout_marginVertical="30dp"
        android:textAppearance="@style/Curiate.TextAppearance.Summary"
        app:layout_constraintTop_toBottomOf="@id/progress_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/save_button"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/preview_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginHorizontal="@dimen/card_margin_horizontal"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation"
        app:strokeWidth="0dp"
        app:layout_constraintTop_toBottomOf="@id/divider_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/content_image"
                android:layout_width="0dp"
                android:layout_height="260dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Curiate.TopRoundedImage"
                tools:src="@mipmap/curate_ic_launcher" />

            <TextView
                android:id="@+id/content_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Curiate.TextAppearance.Title"
                android:textSize="18sp"
                android:maxLines="2"
                android:ellipsize="end"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginHorizontal="@dimen/content_padding_horizontal"
                app:layout_constraintTop_toBottomOf="@id/content_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Article Title or Video Title Goes Here and Can Wrap to Two Lines" />

            <TextView
                android:id="@+id/content_url"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Curiate.TextAppearance.Meta"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginHorizontal="@dimen/content_padding_horizontal"
                android:paddingBottom="@dimen/content_padding_vertical"
                app:layout_constraintTop_toBottomOf="@id/content_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="www.example-long-url-that-gets-truncated.com" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save_post"
        android:layout_marginTop="@dimen/card_margin_vertical"
        android:layout_marginHorizontal="@dimen/card_margin_horizontal"
        app:layout_constraintTop_toBottomOf="@id/preview_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1"/>

    <!-- Groups to manage visibility -->
    <androidx.constraintlayout.widget.Group
        android:id="@+id/loading_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="progress_bar,fetching_text"
        tools:visibility="visible"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/content_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="preview_card"
        tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>